k3s/infra/traefik/service-in.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-loadbalancer-in
  namespace: infra
  labels:
    app.kubernetes.io/name: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: https
      port: 443
      targetPort: https
    - name: http
      port: 80
      targetPort: http
